--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,15 +1,32 @@
 .App-header {
-    width: 20%;
+    width: 100%;
 
     .header-container {
-        @include flexCenter(flex-start, center, row);
+        @include flexCenter(space-between, center, row);
 
-        padding: 20px 0;
-        padding-left: 4vw;
+        padding: 20px 2vw;
         text-align: center;
+
+        .header-title-container {
+            @include flexCenter(center, center, row);
+
+            text-align: center;
+        }
     }
 }
 .text-header {
     color: white;
-    font-size: 1.5vw;
+    font-size: 1.2rem;
+}
+.normal-text-header {
+    color: white;
+    font-size: 1.2rem;
+}
+
+@media only screen and (max-width: 950px) {
+    .App-header {
+        .header-container {
+            padding: 20px 4vw;
+        }
+    }
 }
