--- a/src/styles/_mainApp.scss
+++ b/src/styles/_mainApp.scss
@@ -1,25 +1,28 @@
 .App {
-  background-color: #000000;
+  // background: url('../assets/images/background/gradient.jpg') center no-repeat;
+  // background-size: cover;
   min-height: 100vh;
   display: flex;
   text-align: center;
+  flex-direction: column;
   position: relative;
   overflow-y: hidden;
+  z-index: 9999;
   
   .main-component-container {
-    @include flexCenter(center, flex-start);
+    @include flexCenter(center, center);
 
-    height: 100%;
+    height: 100vh;
     padding: 0 20px;
 
     h1 {
-      font-size: 1.5vw;
+      font-size: 1rem;
       color: white;
     }
   }
 }
 
 .animated-dot {
-  font-size: 1.5vw;
+  font-size: 1rem;
   animation: animatedDot 1s ease-in-out infinite;
 }
