--- a/src/styles/_menuButton.scss
+++ b/src/styles/_menuButton.scss
@@ -1,23 +1,22 @@
 .menu-button-container {
-    @include flexCenter(center, center);
+    @include flexCenter(space-between, flex-end);
 
-    width: 60px;
-    height: 60px;
-    position: absolute;
-    right: 40px;
-    bottom: 5%;
-    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    // position: absolute;
+    // right: 40px;
+    // bottom: 5%;
     z-index: 2000;
     transition: all .5s linear;
-    &:hover {
-        background-color: white;
+    cursor: pointer;
+    &:active {
+        opacity: 0.3;
+        transition: all .2s linear;
     }
 
     button {
         width: 100%;
         height: 100%;
-        border-radius: 50%;
-        border: 1px solid white;
         background-color: transparent;
         cursor: pointer;
         outline: none;
@@ -28,5 +27,12 @@
             color: white;
             transition: all .5s linear;
         }
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    .menu-button-container {
+        width: 30px;
+        height: 30px;
     }
 }
