feat: add vanta, new styles, new UI

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   /* font-family: 'Poppins', sans-serif; */
+  font-family: "Josefin Sans", sans-serif;
 }
 
 h1,
@@ -26,8 +27,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
-  background: url("./assets/images/background/gradient.jpg") center no-repeat;
-  background-size: cover;
+  /* background: url("./assets/images/background/gradient.png") center no-repeat;
+  background-size: cover; */
+  color: white;
 }
 
 code {
