--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -58,3 +58,26 @@
         transform: translateY(-60%);
     }
 }
+
+@keyframes homeTextAnimation {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+        transform: scale(1.1);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1.2);
+    }
+}
+
+@keyframes opacityIncrease {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
