--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -142,6 +142,56 @@
   }
 }
 
+@-webkit-keyframes homeTextAnimation {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+}
+
+@keyframes homeTextAnimation {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+}
+
+@-webkit-keyframes opacityIncrease {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes opacityIncrease {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .App {
   min-height: 100vh;
   display: -webkit-box;
@@ -155,35 +205,6 @@
   position: relative;
   overflow-y: hidden;
   z-index: 9999;
-}
-
-.App .main-component-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  height: 100vh;
-  padding: 0 20px;
-}
-
-.App .main-component-container h1 {
-  font-size: 1rem;
-  color: white;
-}
-
-.animated-dot {
-  font-size: 1rem;
-  -webkit-animation: animatedDot 1s ease-in-out infinite;
-  animation: animatedDot 1s ease-in-out infinite;
 }
 
 .App-header {
@@ -205,7 +226,6 @@
   -ms-flex-align: center;
   align-items: center;
   padding: 20px 2vw;
-  text-align: center;
 }
 
 .App-header .header-container .header-title-container {
@@ -227,12 +247,13 @@
 
 .text-header {
   color: white;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .normal-text-header {
   color: white;
-  font-size: 1.2rem;
+  font-size: 0.8rem;
+  font-weight: 300;
 }
 
 @media only screen and (max-width: 950px) {
@@ -296,14 +317,14 @@
 .down-screen-container {
   width: 100%;
   height: 100vh;
-  background-color: black;
+  background: url("../assets/images/background/gradient.png") center no-repeat;
+  background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: 100%;
   left: 0;
-  right: 0;
   z-index: 100;
   -webkit-transform: translateY(100%);
   transform: translateY(100%);
@@ -521,7 +542,7 @@
 }
 
 .start-screen-container {
-  background: url("../assets/images/background/gradient.jpg") center no-repeat;
+  background: url("../assets/images/background/gradient.png") center no-repeat;
   background-size: cover;
   width: 100%;
   min-height: 100vh;
@@ -561,8 +582,9 @@
 }
 
 .start-screen-container .start-component-container h1 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: white;
+  font-weight: 200;
 }
 
 .start-screen-container .start-component-container p {
@@ -570,7 +592,7 @@
   border: none;
   color: white;
   margin-top: 100px;
-  font-weight: bold;
+  font-weight: lighter;
   cursor: pointer;
   -webkit-transition: all 0.3s linear;
   transition: all 0.3s linear;
@@ -578,6 +600,7 @@
 
 .start-screen-container .start-component-container p:hover {
   opacity: 0.5;
+  word-spacing: 80%;
 }
 
 .animated-dot {
@@ -594,7 +617,52 @@
 
 @media only screen and (max-width: 950px) {
   .start-screen-container .start-component-container h1 {
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
+  .start-screen-container .start-component-container p {
+    font-size: 0.8rem;
+  }
+}
+
+.home-page-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 100%;
+  height: 90vh;
+}
+
+.home-page-container .home-page-text-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.home-page-container .home-page-text-content .name-animation {
+  opacity: 0;
+  -webkit-animation: homeTextAnimation 4s ease-in-out;
+  animation: homeTextAnimation 4s ease-in-out;
 }
 /*# sourceMappingURL=styles.css.map */
