--- a/src/styles/_mainApp.scss
+++ b/src/styles/_mainApp.scss
@@ -2,10 +2,10 @@
   // background: url('../assets/images/background/gradient.png') center no-repeat;
   // background-size: cover;
   min-height: 100vh;
-  display: flex;
-  text-align: center;
-  flex-direction: column;
+  // display: flex;
+  // text-align: center;
+  // flex-direction: column;
   position: relative;
   overflow-y: hidden;
-  z-index: 9999;
+  // z-index: 9999;
 }
