--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,24 +1,24 @@
 //Variables
-@import './variables';
+@import "./variables";
 
 //Animations
-@import './animations';
+@import "./animations";
 
 //Mixin
-@import './mixinStyles';
+@import "./mixinStyles";
 
 //Main component styles
-@import './mainApp';
+@import "./mainApp";
 
 //Components imports
-@import './header';
-@import './menuButton';
-@import './downScreen';
-@import './containersWithBorder';
-@import './normalText';
-@import './navItem';
-@import './filterImage';
-@import './line';
-@import './startScreen';
-@import './homePage';
-@import './downArrow';
+@import "./header";
+@import "./menuButton";
+@import "./downScreen";
+@import "./containersWithBorder";
+@import "./normalText";
+@import "./navItem";
+@import "./filterImage";
+@import "./line";
+@import "./startScreen";
+@import "./homePage";
+@import "./downArrow";
