--- a/src/styles/_downScreen.scss
+++ b/src/styles/_downScreen.scss
@@ -1,56 +1,56 @@
 .down-screen-container {
+  width: 100%;
+  background: url("../assets/images/background/gradient.png") center no-repeat;
+  background-size: cover;
+  display: flex;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 100;
+  transform: translateY(100%);
+
+  .left-side-content {
+    @include flexCenter(center, center);
+
+    width: 20%;
+
+    .left-side-top-container {
+      @include flexCenter(flex-start, flex-end);
+
+      width: 100%;
+      height: 80%;
+      padding-top: 60px;
+      overflow: hidden;
+    }
+
+    .left-side-bottom-container {
+      @include flexCenter(center, flex-end);
+
+      width: 100%;
+      height: 20%;
+      overflow: hidden;
+    }
+  }
+  .middle-side-content {
+    @include flexCenter(center, center);
+
     width: 100%;
-    height: 100vh;
-    // background-color: black;
-    background: url("../assets/images/background/gradient.png") center no-repeat;
-    background-size: cover;
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    transform: translateY(100%);
+    height: 100%;
 
-    .left-side-content {
-        @include flexCenter(center, center);
+    .middle-side-container {
+      @include flexCenter(center, flex-start);
 
-        width: 20%;
+      width: 100%;
+      height: 100%;
 
-        .left-side-top-container {
-            @include flexCenter(flex-start, flex-end);
+      .middle-navigation-list {
+        @include flexCenter(center, flex-start);
 
-            width: 100%;
-            height: 80%;
-            padding-top: 20px;
-            overflow: hidden;
-        }
-
-        .left-side-bottom-container {
-            @include flexCenter(center, flex-end);
-
-            width: 100%;
-            height: 20%;
-            overflow: hidden;
-        }
+        position: relative;
+        z-index: 101;
+      }
     }
-    .middle-side-content {
-        @include flexCenter(center, center);
-
-        width: 100%;
-        height: 100%;
-
-        .middle-side-container {
-            @include flexCenter(center, flex-start);
-
-            width: 100%;
-            height: 100%;
-
-            .middle-navigation-list {
-                @include flexCenter(center, flex-start);
-
-                position: relative;
-                z-index: 101;
-            }
-        }
-    }
+  }
 }
