--- a/src/styles/_downScreen.scss
+++ b/src/styles/_downScreen.scss
@@ -6,11 +6,9 @@
   display: flex;
   position: fixed;
   top: 100%;
-  //   bottom: 0;
   right: 0;
   left: 0;
   z-index: 100;
-  //   transform: translateY(100%);
 
   .left-side-content {
     @include flexCenter(center, center);
@@ -23,6 +21,7 @@
       width: 100%;
       height: 80%;
       padding-top: 60px;
+      word-wrap: anywhere;
       overflow: hidden;
     }
 
