--- a/src/styles/_homePage.scss
+++ b/src/styles/_homePage.scss
@@ -2,8 +2,9 @@
   @include flexCenter(center, center);
 
   width: 100%;
-  min-height: 100vh;
-  //   height: 100vh;
+  height: 100vh;
+  text-align: center;
+  position: relative;
 
   .home-page-text-content {
     @include flexCenter(center, center);
@@ -49,12 +50,12 @@
   }
 
   .home-page-image-container {
-    position: fixed;
+    position: absolute;
     top: 0;
+    bottom: 0;
     right: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -200;
+    margin: auto 0;
+    z-index: -100;
     transition: all 1s linear;
 
     img {
