--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -23,3 +23,9 @@
 @import "./homePage";
 @import "./upArrow";
 @import "./downArrow";
+@import "./layout";
+
+//Sections
+@import "./aboutMe";
+@import "./technologies";
+@import "./contact";
